force-app/main/default/objects/Contact/fields/Customer_Type_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type_From_Account__c</fullName>
    <formula>IF(AccountId &lt;&gt; NULL, TEXT(Account.Customer_Type__c), &apos;Individual&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Type From Account</label>
    <type>Text</type>
</CustomField>