force-app/main/default/objects/Contact/fields/CYTK_User_Id__c.field-meta.xml
<CustomField>
    <fullName>CYTK_User_Id__c</fullName>
    <description>The user id in cytk</description>
    <externalId>true</externalId>
    <label>CYTK User Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>