force-app/main/default/objects/Contact/listViews/Pilots.listView-meta.xml
<ListView>
    <fullName>Pilots</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>pilot</value>
    </filters>
    <label>Pilots</label>
</ListView>