force-app/main/default/objects/Contact/listViews/Testers.listView-meta.xml
<ListView>
    <fullName>Testers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Type__c</field>
        <operation>includes</operation>
        <value>tester</value>
    </filters>
    <label>Testers</label>
</ListView>